연결만 시켜놨어요

--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -17,7 +17,7 @@
 
         <!-- 검색 바 -->
         <div class="search-bar">
-            <form action="/searchBooks" method="get">
+            <form action="/searchBookPage/searchBooks" method="get">
                 <input type="text" name="query" placeholder="검색어를 입력하세요" />
                 <button type="submit">Search</button>
             </form>
