--- a/src/main/resources/static/css/admin/main.css
+++ b/src/main/resources/static/css/admin/main.css
@@ -13,7 +13,6 @@
   background-color: #EFEFEF;
   font-family: 'Pretendard-Regular';
   box-sizing: border-box;
-  border: 1px solid black;
 }
 
 .content-box {
@@ -154,13 +153,13 @@
   border: 1px solid rgb(37, 37, 37);
   border-radius: 4px;
   background-color: #f5f5f5;
-  font-weight: 400;
+  font-weight: 600;
   color: rgb(37, 37, 37);
   padding: 12px;
   width: 200px;
   text-align: left;
   cursor: pointer;
-  font-size: 15px;
+  font-size: 20px;
   appearance: none; 
   background-image: url('data:image/svg+xml;utf8,<svg fill="%23000000" height="10" viewBox="0 0 24 24" width="10" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>');
   background-repeat: no-repeat;
@@ -262,4 +261,24 @@
 .sales-table{
   width: 500px;
   height: 520px;
+}
+
+.sales-title {
+  font-size: 15px; 
+  font-weight: lighter;
+  color: gray;
+
+}
+
+.sales-count {
+  font-size: 38px;
+  font-weight: bold;
+}
+
+
+
+#listName{
+  font-size: 20px;
+  font-weight: 600;
+ 
 }
