--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -43,23 +43,23 @@
       </div>
     
       <div class="content">
-        <h1>
-          <div class="sort-dropdown">
-            <select id="sortSelect" class="dropbtn">
-              <option value="signUp" selected>가입 회원현황</option>
-              <option value="delete">탈퇴 회원</option>
-              <option value="unlogin">로그인 6개월 이상</option>
-            </select>
+          <div class="title">
+            <div class="sort-dropdown">
+              <select id="sortSelect" class="dropbtn">
+                <option value="signUp" selected>가입 회원현황</option>
+                <option value="delete">탈퇴 회원</option>
+                <option value="unlogin">로그인 6개월 이상</option>
+              </select>
+            </div>
+            <div class="btn-container" hidden>
+                <button value="weeks">1주일</button>
+                <button value="month">1개월</button>
+                <button value="6month">6개월</button>
+                <button value="6month">기간 설정</button>
+                <input type="date" hidden>
+            </div>
           </div>
-        </h1>
 
-        <div class="sort-dropdown">
-          <select id="termSelect" >
-              <option value="weeks">1주일</option>
-              <option value="month">1개월</option>
-              <option value="6month">6개월</option>
-          </select>
-        </div>
       
         <div class="graph-box">
       
