--- a/src/main/resources/templates/admin/manager.html
+++ b/src/main/resources/templates/admin/manager.html
@@ -56,7 +56,7 @@
           </select>
         </label>
         <div>
-          <input type="text" id="searchText" hidden>
+          <input type="text" id="searchText" class= "hidden">
         </div>
 
         <ul id="resultArea">
