--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -54,15 +54,54 @@
 IMP.init("imp14397622");
 
 function requestPay() {
-  IMP.request_pay({
-    channelKey: "채널키",
-    pay_method: "card",
-    merchant_uid: "test_m3fap7ff",
-    name: "테스트 결제",
-    amount: 100,
-    buyer_tel: "010-0000-0000",
-  });
+  const payButton = document.querySelector("button[onclick='requestPay()']");
+  payButton.disabled = true;
+  payButton.innerText = "결제 진행 중...";
+
+  IMP.request_pay(
+    {
+      channelKey: "channel-key-bf43e218-5567-4875-96da-3270e1fba054",
+      pay_method: "card",
+      merchant_uid: "test_m3fap7f",
+      name: "테스트 결제",
+      amount: 100,
+      buyer_tel: "010-0000-0000",
+    },
+    function (rsp) {
+      payButton.disabled = false;
+      payButton.innerText = "결제하기";
+
+      if (rsp.success) {
+        fetch("/payment", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            merchant_uid: rsp.merchant_uid,
+            amount: rsp.paid_amount,
+            buyer_tel: rsp.buyer_tel,
+            status: rsp.status,
+          }),
+        })
+          .then((response) => {
+            if (response.ok) {
+              window.location.href = "/order/afterOrder?orderId=" + rsp.merchant_uid;
+            } else {
+              alert("결제 정보 저장 실패");
+            }
+          })
+          .catch((err) => {
+            console.error("Error:", err);
+            alert("결제 중 문제가 발생했습니다.");
+          });
+      } else {
+        alert("결제에 실패하였습니다. 에러: " + rsp.error_msg);
+      }
+    }
+  );
 }
+
 </script>
 
 </body>
