--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -51,12 +51,12 @@
                 <option value="unlogin">로그인 6개월 이상</option>
               </select>
             </div>
-            <div class="btn-container" hidden>
-                <button value="weeks">1주일</button>
-                <button value="month">1개월</button>
-                <button value="6month">6개월</button>
-                <button value="6month">기간 설정</button>
-                <input type="date" hidden>
+            <div class="btn-container">
+                <button class="weeks">1주일</button>
+                <button class="month">1개월</button>
+                <button class="sixMonth">6개월</button>
+                <button class="dateSelect">기간 설정</button>
+                <input type="date" class="date hidden">
             </div>
           </div>
 
