결제 기능 연결

--- a/src/main/resources/templates/order/order.html
+++ b/src/main/resources/templates/order/order.html
@@ -60,9 +60,9 @@ function requestPay() {
 
   IMP.request_pay(
     {
-      channelKey: "channel-key-bf43e218-5567-4875-96da-3270e1fba054",
+      channelKey: "",
       pay_method: "card",
-      merchant_uid: "test_m3fap7f",
+      merchant_uid: "test_m3fap7f211asdsasadddaaaa",
       name: "테스트 결제",
       amount: 100,
       buyer_tel: "010-0000-0000",
