--- a/src/main/resources/static/css/admin/main.css
+++ b/src/main/resources/static/css/admin/main.css
@@ -15,6 +15,13 @@
   box-sizing: border-box;
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden; /* 스크롤 없애기 */
+}
+
 .content-box {
   display: flex;
   flex-direction: row;
@@ -159,12 +166,21 @@
 }
 
 .btn-container > button{
-  width: 100px;
-  height: 40px;
+  width: 80px; 
+  height: 35px; 
+  border: 1px solid #a7a7a7; 
   border-radius: 5px;
-  font-weight: 150px;
-  font-size: larger;
+  background-color: #EFEFEF;
+  color: #a7a7a7;
+  font-weight: 200;
+  font-size: 14px;
   margin-right: 10px;
+  cursor: pointer;
+}
+
+.btn-container > button.active {
+  border: 1px solid black;
+  color: black;
 }
 
 .btn-container > input{
@@ -271,9 +287,21 @@
   font-size: 25px;
   font-weight: bold;
   display: flex;
+  gap: 250px;
+  
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: flex-start;
+  align-items: center;
+  height: 150px;
 }
+
+.sales > div{
+  text-align: left;
+  width: 250px;
+  min-width: 250px;
+}
+
+
 
 .content-box2{
   display: flex;
@@ -305,12 +333,12 @@
   font-size: 15px; 
   font-weight: lighter;
   color: gray;
-
 }
 
 .sales-count {
   font-size: 38px;
   font-weight: bold;
+  display: block;
 }
 
 
@@ -318,5 +346,117 @@
 #listName{
   font-size: 20px;
   font-weight: 600;
- 
 }
+
+
+/* 테이블 스타일 */
+.member-table {
+  width: 700px;
+  table-layout: fixed;
+  border-collapse: collapse;
+  margin-top: 20px;
+  background-color: #EFEFEF;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+}
+
+
+
+.member-table th {
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-weight: 300; 
+  color: #fff; 
+  background-color: #EFEFEF;
+}
+
+.member-table th:nth-child(1),
+.member-table th:nth-child(2),
+.member-table th:nth-child(3),
+.member-table th:nth-child(4),
+.member-table th:nth-child(5) {
+  background-color: #205375;
+}
+
+.member-table td {
+  padding: 12px 15px;
+  text-align: center;
+  font-size: 14px;
+  color: rgb(29, 30, 57); 
+  background-color: #EFEFEF;
+}
+
+.member-table tr{
+  height: 40px;
+}
+
+.member-table tr:nth-child(even) td {
+  background-color: #ffffff;
+}
+
+
+
+.member-table tr:hover td {
+  background-color: #a3a2a2;
+}
+
+
+.member-table button {
+  background-color: #205375; 
+  color: #fff;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 12px;
+  transition: background-color 0.3s ease;
+}
+
+.member-table button:hover {
+  background-color: rgb(29, 30, 57);
+}
+
+/* 페이지네이션 스타일 */
+.pagination-area {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px; 
+  padding: 10px 0;
+  background-color: #EFEFEF;
+}
+
+.pagination {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 10px; 
+}
+
+.pagination a {
+  display: block;
+  padding: 8px 12px;
+  text-decoration: none;
+  background-color: #205375;
+  color: #fff; 
+  border-radius: 4px; 
+  font-size: 14px;
+  font-weight: 600;
+  transition: background-color 0.3s ease;
+}
+
+.pagination a:hover {
+  background-color: rgb(29, 30, 57); 
+  cursor: pointer; 
+}
+
+.pagination a.current {
+  background-color: #205375;
+  font-weight: bold; 
+  cursor: pointer; 
+}
+
