--- a/src/main/resources/templates/admin/main.html
+++ b/src/main/resources/templates/admin/main.html
@@ -65,8 +65,9 @@
       
           <div class="sales"> 
             <div>총 회원 수 : 00명</div>
-            <div>기간 중 가입 회원 수 : 00명</div>
+            <div>현재 이용중인 회원 수 : 00명</div>
             <div>기간 중 탈퇴 회원수 : 00명</div>
+            <div>기간 중 가입 회원 수 : 00명</div>
           </div>
       
           <div class="content-box2">
