searchBook.html 오타 해결

--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -92,7 +92,7 @@
 
         <div class="check-toGo">
           <label class="allCheck">
-            <button type="button" id="selectAllButton"">전체선택</button>
+            <button type="button" id="selectAllButton">전체선택</button>
           </label>
           <label class="check-bagButton">
             <button type="button" onclick="ifChecked('cart')">장바구니</button></label>
