241114 css 발굴하다가 실패해서 아무것도 못함. 대신 사이드바 만들고 고객지원 메인페이지 가닥잡음

--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -24,6 +24,13 @@ main {
   padding: 20px;
 }
 
+.main-content {
+  min-height: calc(100vh - 377px); /* 푸터 높이 277px + 헤더 높이 100px */
+  box-sizing: border-box;
+  flex: 1;
+}
+
+
 h2 {
   font-weight: bold !important;
 }
