--- a/src/main/resources/templates/common/loginHeader.html
+++ b/src/main/resources/templates/common/loginHeader.html
@@ -12,7 +12,7 @@
             <a href="#">카테고리1</a>
             <a href="#">카테고리2</a>
             <a href="#">카테고리3</a>
-            <a href="/query">고객지원</a>
+            <a href="/support">고객지원</a>
         </nav>
 
         <!-- 검색 바 -->
@@ -33,3 +33,27 @@
         <script src="/js/searchBookPage/searchBook.js"></script>
     </header>
 </div>
+
+<th:block>
+    <div id="side-menu" class="header-side-menu">
+        <!-- 사이드 메뉴 항목 -->
+        <nav>
+            <div class="header-nav-item-wrapper">
+                <a href="#" class="header-nav-item">1:1 문의</a>
+            </div>
+            <div class="header-nav-item-wrapper">
+              <a href="#" class="header-nav-item">자주 묻는 질문</a>
+            </div>
+            <div class="header-nav-item-wrapper">
+              <a href="#" class="header-nav-item">공지사항</a>
+            </div>
+            <div class="header-nav-item-wrapper">
+              <a href="#" class="header-nav-item"></a>
+            </div>
+            <div class="header-nav-item-wrapper">
+              <a href="#" class="header-nav-item"></a>
+            </div>
+            </div>
+        </nav>
+    </div>
+</th:block>
