--- a/src/main/resources/static/css/main/query.css
+++ b/src/main/resources/static/css/main/query.css
@@ -1,4 +1,5 @@
 .form-control {
+  width:19px;
   display: block;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -8,4 +9,23 @@
   width: 50% !important ; 
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
+}
+.content-box {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  gap: 20px;
+  width: 100%; 
+  height: 100%;
+}
+.sideBar {
+  max-width: 250px;
+  height: 100vh;
+  background-color: #EFEFEF;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  box-sizing: border-box;
+  flex-shrink: 0;
+  font-size: 14px;
 }
