--- a/src/main/resources/static/css/cart/cart.css
+++ b/src/main/resources/static/css/cart/cart.css
@@ -1,10 +1,18 @@
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-style: normal;
+}
+
 * {
+
+  margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Pretendard-Regular';
 }
 
 .cartMain {
-  font-family: Arial, sans-serif;
   margin-left: 18%;
 }
 
