--- a/src/main/resources/static/css/fragments/header.css
+++ b/src/main/resources/static/css/fragments/header.css
@@ -1,5 +1,11 @@
 header {
-  padding: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: #FEFEFE; 
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .header-container {
@@ -7,9 +13,11 @@ header {
   align-items: center;
   justify-content: space-between;
   padding: 10px 20px;
-  background-color: ivory;
-  position: relative;
-  flex : 1;
+  
+}
+
+body {
+  padding-top: 250px;
 }
 
 .logo {
@@ -78,7 +86,16 @@ header {
   text-decoration-line: none;
 }
 
+
+body.modal-open {
+  overflow: auto !important;
+  padding-right: 0 !important;
+}
+
+.modal {
+  overflow-y: auto;
+}
+
 #modalLogin {
   display: none;
-  position: fixed;
 }
