--- a/src/main/resources/templates/cart/cart.html
+++ b/src/main/resources/templates/cart/cart.html
@@ -27,7 +27,7 @@
             <tbody>
               <tr th:each="item : ${cartItems}">
                 <td><input type="checkbox"></td>
-                <td><img th:src="@{${item.bookCover}}" alt="책 이미지"></td>
+                <td><img th:src="${book != null and book.bookCover != null ? book.bookCover : '/images/bookCover/default.jpg'}" alt="책 이미지"></td>
                 <td th:text="${item.bookTitle}"></td>
                 <td th:text="${item.bookPrice} + '원'"></td>
                 <td>
