241115 고객지원 카테고리 구현중 main/query 관련 데이터들 전부 삭제

--- a/src/main/resources/templates/common/footer.html
+++ b/src/main/resources/templates/common/footer.html
@@ -1,6 +1,6 @@
 <div class="container"></div>
-    <header>헤더 내용</header>
-    <main class="main-content">주요 컨텐츠</main>
+    <header></header>
+    <main class="main-content"></main>
     <footer class="footer" th:fragment="footer">
     <!-- 푸터 내용 -->
         <div class="footer-content">
