--- a/src/main/resources/static/css/customer/support.css
+++ b/src/main/resources/static/css/customer/support.css
@@ -1,4 +1,9 @@
-body{
+*{
+  border: 1px solid black;
+}
+
+.supportContainer{
   display: flex;
   flex-direction: column;
+  border: 1px solid black;
 }
