--- a/src/main/resources/templates/common/common.html
+++ b/src/main/resources/templates/common/common.html
@@ -11,5 +11,6 @@
   </header>
 </div>
 
+<div th:replace= "~{common/side-menu}"></div>
 <script th:src="@{/js/fragments/header.js}"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
