--- a/src/main/resources/templates/common/unLoginHeader.html
+++ b/src/main/resources/templates/common/unLoginHeader.html
@@ -3,7 +3,7 @@
         <!-- 로고 -->
         <div class="logo">
             <a href="/">
-                <img src="/images/logo.png" alt="Logo" class="logoImg">
+                <img src="/images/logo.png" alt="Logo">
             </a>
         </div>
 
@@ -14,7 +14,7 @@
             <a href="#">카테고리3</a>
             <a href="/support">고객지원</a>
         </nav>
-        
+
         <!-- 검색 바 -->
         <div class="search-bar">
             <form action="/searchBookPage/searchBooks" method="get">
@@ -29,11 +29,10 @@
                 data-bs-target="#modalLogin">로그인</button>
             <a href="/member/signUp" class="btn btn-primary headerJoinBtn">회원가입</a>
             <a href="/cart" class="btn btn-primary headerCartBtn">장바구니</a>
-
-
         </div>
     </header>
-    <!-- 로그인 모달 (Sign Up 모달을 로그인 모달로 변경) -->
+
+    <!-- 로그인 모달 -->
     <div class="modal fade" id="modalLogin" tabindex="-1" aria-labelledby="modalLoginLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content rounded-4 shadow">
