--- a/src/main/resources/static/css/main/main.css
+++ b/src/main/resources/static/css/main/main.css
@@ -32,8 +32,23 @@ main {
   max-width: 800px;
   margin: 0 auto;
   padding: 20px;
+  padding-top: 100px; /* 헤더 높이와 일치 */
 }
 
+
+.header-container {
+  height: 100px; /* 헤더 높이를 명시적으로 설정 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #FEFEFE; 
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
+}
 .main-content {
   min-height: calc(100vh - 527px); /* 푸터 높이 277px + 헤더 높이 250px */
 
