--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -10,147 +10,149 @@
 
 <body>
   <header th:replace="~{common/common}"></header>
-  <section class="recommend">
-    <h2>오늘의 추천 도서</h2>
-  <div class="book-slider" id="bookSlider">
-    <div class="book" data-index="0">
-      <div class="book-cover"></div>
-      <div class="book-info">
-        <h5>책이름: OOO
-          <p>정원근 · PhantomBooks</p>
-          <br>
-          <br>
-          15,500원
-          <br>
-          <br>
-          <p>코딩 개발자를 꿈꾸는 자라면 필독!! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
-        </h5>
-      </div>
-    </div>
-    <div class="book" data-index="1">
-      <div class="book-cover"></div>
-      <div class="book-info">
-        <h5>책이름: QQQ
-          <p>정원근 · PhantomBooks</p>
-          <br>
-          <br>
-          18,000원
-          <br>
-          <br>
-          <p>데이터 분석의 길잡이! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
-        </h5>
-      </div>
-    </div>
-    <div class="book" data-index="2">
-      <div class="book-cover"></div>
-      <div class="book-info">
-        <h5>책이름: RRR
-          <p>정원근 · PhantomBooks</p>
-          <br>
-          <br>
-          20,000원
-          <br>
-          <br>
-          <p>소프트웨어 개발자로서 성공하는 방법! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
-        </h5>
-      </div>
-    </div>
-  </div>
-  </section>
-
-  <section class="personalized">
-    <h2>취향에 맞는 추천도서</h2>
-    <br>
-    <br>
-    <div class="RecommendContainer">
-      <div class="recommendWrapperContainer">
-        <div class="recommendation-wrapper" id="scroll-container">
-          <ul class="recommendation-list">
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend1.jpg" alt="추천 도서 1">
-                <h3>추천 도서 1</h3>
-                <p>12,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend2.jpg" alt="추천 도서 2">
-                <h3>추천 도서 2</h3>
-                <p>15,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend3.jpg" alt="추천 도서 3">
-                <h3>추천 도서 3</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend4.jpg" alt="추천 도서 4">
-                <h3>추천 도서 4</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend5.jpg" alt="추천 도서 5">
-                <h3>추천 도서 5</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend6.jpg" alt="추천 도서 6">
-                <h3>추천 도서 6</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend7.jpg" alt="추천 도서 7">
-                <h3>추천 도서 7</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend8.jpg" alt="추천 도서 8">
-                <h3>추천 도서 8</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend9.jpg" alt="추천 도서 9">
-                <h3>추천 도서 9</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend10.jpg" alt="추천 도서 10">
-                <h3>추천 도서 10</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-            <li class="recommendation-item">
-              <a href="#">
-                <img src="recommend11.jpg" alt="추천 도서 11">
-                <h3>추천 도서 11</h3>
-                <p>10,000원</p>
-              </a>
-            </li>
-          </ul>
+  <main>
+    <section class="recommend">
+      <h2>오늘의 추천 도서</h2>
+    <div class="book-slider" id="bookSlider">
+      <div class="book" data-index="0">
+        <div class="book-cover"></div>
+        <div class="book-info">
+          <h5>책이름: OOO
+            <p>정원근 · PhantomBooks</p>
+            <br>
+            <br>
+            15,500원
+            <br>
+            <br>
+            <p>코딩 개발자를 꿈꾸는 자라면 필독!! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
+          </h5>
         </div>
-        <div class="slider-indicator">
-          <div class="scroll-bar"></div>
+      </div>
+      <div class="book" data-index="1">
+        <div class="book-cover"></div>
+        <div class="book-info">
+          <h5>책이름: QQQ
+            <p>정원근 · PhantomBooks</p>
+            <br>
+            <br>
+            18,000원
+            <br>
+            <br>
+            <p>데이터 분석의 길잡이! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
+          </h5>
+        </div>
+      </div>
+      <div class="book" data-index="2">
+        <div class="book-cover"></div>
+        <div class="book-info">
+          <h5>책이름: RRR
+            <p>정원근 · PhantomBooks</p>
+            <br>
+            <br>
+            20,000원
+            <br>
+            <br>
+            <p>소프트웨어 개발자로서 성공하는 방법! 샬라샬라얄리얄리얄라숑얄라리얄라</p>
+          </h5>
         </div>
       </div>
     </div>
-  </section>
+    </section>
+  
+    <section class="personalized">
+      <h2>취향에 맞는 추천도서</h2>
+      <br>
+      <br>
+      <div class="RecommendContainer">
+        <div class="recommendWrapperContainer">
+          <div class="recommendation-wrapper" id="scroll-container">
+            <ul class="recommendation-list">
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend1.jpg" alt="추천 도서 1">
+                  <h3>추천 도서 1</h3>
+                  <p>12,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend2.jpg" alt="추천 도서 2">
+                  <h3>추천 도서 2</h3>
+                  <p>15,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend3.jpg" alt="추천 도서 3">
+                  <h3>추천 도서 3</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend4.jpg" alt="추천 도서 4">
+                  <h3>추천 도서 4</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend5.jpg" alt="추천 도서 5">
+                  <h3>추천 도서 5</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend6.jpg" alt="추천 도서 6">
+                  <h3>추천 도서 6</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend7.jpg" alt="추천 도서 7">
+                  <h3>추천 도서 7</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend8.jpg" alt="추천 도서 8">
+                  <h3>추천 도서 8</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend9.jpg" alt="추천 도서 9">
+                  <h3>추천 도서 9</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend10.jpg" alt="추천 도서 10">
+                  <h3>추천 도서 10</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+              <li class="recommendation-item">
+                <a href="#">
+                  <img src="recommend11.jpg" alt="추천 도서 11">
+                  <h3>추천 도서 11</h3>
+                  <p>10,000원</p>
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div class="slider-indicator">
+            <div class="scroll-bar"></div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
 <!-- 푸터 조각 삽입 -->
 <footer th:replace="~{common/footer :: footer}"></footer>
