--- a/src/main/resources/templates/searchBookPage/searchBook.html
+++ b/src/main/resources/templates/searchBookPage/searchBook.html
@@ -31,7 +31,7 @@
             <label><input type="checkbox" value="판타지">판타지</label>
             <label><input type="checkbox" value="미스터리">미스터리</label>
             <label><input type="checkbox" value="철학">철학</label>
-            <label><input type="checkbox" value="문학">value</label>
+            <label><input type="checkbox" value="문학">문학</label>
             <label><input type="checkbox" value="예술">예술</label>
             <label><input type="checkbox" value="고전">고전</label>
             <label><input type="checkbox" value="심리학">심리학</label>
@@ -136,8 +136,13 @@
             </label>
         </div>
     </div>
-    
     </form>
+    <div class="pagination-area" >
+      <ul class="pagination">
+      
+        
+      </ul>
+    </div>
   </main>
   <footer th:replace="~{common/footer :: footer}"></footer>
   <script src="/js/searchBookPage/allBook.js"></script>
